# tennispredictor

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  project-outline.yaml  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: data-contracts.md  operations.md
src/tennisprediction/: __init__.py  cli.py  config.py  logging.py  operations.py
tests/: __init__.py
tests/unit/: modeling_fixtures.py  test_backtesting_decisions.py  test_backtesting_metrics.py  test_backtesting_replay.py  test_backtesting_reports.py  test_bootstrap.py  test_cli_commands.py  test_cli_smoke.py  test_feature_differential.py  test_feature_leakage.py  test_feature_ordering.py  test_feature_persistence.py  test_feature_rankings.py  test_feature_runner.py  test_feature_state.py  test_kalshi_client.py  test_kalshi_executable_pricing.py  test_kalshi_jobs.py  test_kalshi_storage.py  test_live_monitor_reports.py  test_live_scan_orchestration.py  test_live_scan_pricing_contract.py  test_live_scan_rejections.py  test_manifests.py  test_market_mapping_aliases.py  test_market_mapping_normalization.py  test_market_mapping_resolver.py  test_modeling_baselines.py  test_modeling_calibration.py  test_modeling_datasets.py  test_modeling_metrics.py  test_modeling_registry.py  test_modeling_splits.py  test_modeling_xgboost.py  (+5 more)
(+140 files in other folders)
