[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[project]
name = "tennisprediction"
version = "0.1.0"
description = "ATP-only tennis prediction and Kalshi EV detection system."
requires-python = "==3.12.*"
dependencies = [
  "duckdb>=1.5,<1.6",
  "polars>=1.41,<1.42",
  "pyarrow>=24,<25",
  "pydantic>=2.13,<2.14",
  "pydantic-settings>=2.14,<2.15",
  "rich>=15,<16",
  "typer>=0.26,<0.27",
]

[dependency-groups]
dev = [
  "mypy>=1.18,<1.19",
  "pre-commit>=4.3,<4.4",
  "pytest>=9.1,<9.2",
  "ruff>=0.15,<0.16",
]

[project.scripts]
tennisprediction = "tennisprediction.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tennisprediction"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
packages = ["tennisprediction"]
